--- a/src/style.css
+++ b/src/style.css
@@ -27,3 +27,15 @@ header {
   padding: 20px;
   box-shadow: 0 2px 10px rgba(0,0,0,0.6);
 }
+
+.header_menu {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header_menu h1 {
+  margin: 0;
+  font-size: 2.2em;
+  color: #ff4081;
+}
