--- a/src/style.css
+++ b/src/style.css
@@ -39,3 +39,29 @@ header {
   font-size: 2.2em;
   color: #ff4081;
 }
+nav ul {
+  display: flex;
+  gap: 20px;
+  margin: 0;
+}
+
+.grid {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+  margin: 30px 0;
+  text-align: left;
+}
+
+.grid img {
+  max-width: 300px;
+  border-radius: 15%;
+  object-fit: cover;
+}
+
+.grid article {
+  max-width: 600px;
+  padding: 0 10px;
+}
